--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css"> </head>
 <body>
   <h1 id="head">HELLO KISHORE</h1>
-  <p>MY FIRST ONLINE PUBLISHED WEBSITE</p>
+  <p>MY FIRST ONLINE WEBSITE</p>
   <div class="btn">
     <button id="changeButton">Click</button> </div>
     <script src="index.js"></script>
