--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
   <h1 id="head">HELLO KISHORE</h1>
   <p>MY FIRST ONLINE WEBSITE</p>
+  <p>feature 1</p>
   <div class="btn">
     <button id="changeButton">Click</button> </div>
+    
     <script src="index.js"> </script>
 </body>
 </html>
