--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1 id="head">HELLO KISHORE</h1>
   <p>MY FIRST ONLINE WEBSITE</p>
-  <p>feature 1</p>
+  <p>feature 1 <a href="google.com">LINK</a></p>
   <div class="btn">
     <button id="changeButton">Click</button> </div>
     
