--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1 id="head">HELLO KISHORE</h1>
   <p>MY FIRST ONLINE WEBSITE</p>
   <p>feature 1 <a href="www.google.com">LINK</a></p>
-  <p>feature 1 <button></button></p>
+  <p>feature 1 <button class="btn">Click</button></p>
   <div class="btn">
     <button id="changeButton">Click</button> </div>
     
